# symlink-examples

./: CMakeLists.txt  README.md  check_symlink.cpp  pyproject.toml  setup.cfg  test_softlink.py  test_symlink.py
.github/workflows/: ci.yml
